--- a/_posts/2024-11-04-first.md
+++ b/_posts/2024-11-04-first.md
@@ -1,21 +1,30 @@
 ---
-title: "first"
-excerpt: "first post"
+title: "rabbitmq 소비 멈춤"
+excerpt: "rabbitmq queue count 알람 발생"
 
 categories:
-  - Categories1
+  - diary
 tags:
   - tag1
 
-permalink: /categories1/first/
+permalink: /diary/first/
 
 toc: true
 toc_sticky: true
 
-date: 2024-11-04
-last_modified_at: 2024-11-04
+date: 2024-11-06
+last_modified_at: 2024-11-06
 ---
 
-##  본문
+##  rabbitmq queue count 알람 발생
 
-test!
+
+&rarr; 프로세스 l7check는 정상동작하나 consumer만 사라졌음  
+&rarr; ack timeout에 걸려서 channel이 끊어짐  
+&rarr; rabbitmq 설정과 listener 로직은 이상 없음  
+&rarr; 재기동하면 큐 소비하다가 다시 멈춤   
+&rarr; 타 서비스에 요청을 보내 파일을 다운로드하는 로직이 있음  
+&rarr; 해당 서비스 로그를 확인하니 100번의 404 발생 후 큐 소비 중단됨  
+&rarr; PoolingHttpClientConnectionManager에 설정된 max-per-route * 프로세스 수 만큼의 404 발생 후 중단   
+&rarr; 파일 다운로드용 공통 artifact에서 에러 발생시 응답을 닫지않아서 connection 반환이 안됐음.   
+&rarr; 수정하여 문제 해결. 자원 해제를 잘 확인하자!  
