update 2nd post

--- a/_posts/2024-11-10-2nd.md
+++ b/_posts/2024-11-10-2nd.md
@@ -18,13 +18,13 @@ last_modified_at: 2024-11-10
 gpt에게 물어보면 알려주긴 하지만 이정도는 알아둬야하지 않을까
 
 ##  awk  
-<h3> ls -l | awk '{ if (\$5 >=1000) print (\$9) }'  </h3>
+<h3> ls -l | awk '{ if ($5 >=1000) print ($9) }'  </h3>
 * 1000바이트 이상 파일이름 출력
 ```
 largefile.txt
 video.mp4
 ```
-<h3> cat /etc/passwd | awk -F ':' '{ print \$3 ";" \$2 "." \$1}' </h3>
+<h3> cat /etc/passwd | awk -F ':' '{ print $3 ";" $2 "." $1}' </h3>
 * -F: 구분자 지정 플래그 
 ```
 ...
@@ -34,7 +34,23 @@ video.mp4
 ```
 
 ## sort
-TODO
+<h3> sort [options] fileName </h3>
+* 기본: 문자정렬  
+* n: 숫자정렬   
+* r: 역순정렬  
+* f: 대소문자무시
+* t: 구분자 지정
+* k: 대상 컬럼 지정
+
+``` bash
+cat a | sort -t ':'  -k2,2r -k1,1
+1:4
+2:4
+2:3
+3:3
+1:2
+2:1
+```
 
 ## sed
 <h3> 's/pattern/text/flag' </h3>
