update 2nd post

--- a/_posts/2024-11-10-2nd.md
+++ b/_posts/2024-11-10-2nd.md
@@ -39,6 +39,7 @@ video.mp4
 * n: 숫자정렬   
 * r: 역순정렬  
 * f: 대소문자무시
+* u: 중복제거
 * t: 구분자 지정
 * k: 대상 컬럼 지정
 
@@ -103,6 +104,8 @@ Result:   Date of event: 08/11/2023.
 Original: Remove all   spaces  here.
 Result:   Removeallspaceshere.
 ```
+
+
 
 
 
