--- a/_posts/2024-11-27-3rd.md
+++ b/_posts/2024-11-27-3rd.md
@@ -1,6 +1,6 @@
 ---
 title: "캐시에 대한 생각"
-excerpt: "캐시에 ttl에 대한 생각"
+excerpt: "캐시 ttl에 대한 생각"
 
 categories:
   - diary
@@ -16,7 +16,7 @@ date: 2024-11-27
 last_modified_at: 2024-11-27
 ---
 
-##  cache ttl에 대한 생각 
+##  캐시 ttl에 대한 생각 
 서버에 사용자의 요청을 받아서 메세지를 써주는 기능이 있다.  
 이 요청은 이미지 url을 받으면 이미지도 같이 보여주는데, 보안 요구사항이 있어 이미지인지 아닌지 체크를 하는 로직이 들어갔다.  
 체크 로직은 타 서버에서 진행하고 특정 url에 대한 이미지 판단 결과를 1일 캐시로 저장한다.  
