--- a/_posts/2024-11-10-2nd.md
+++ b/_posts/2024-11-10-2nd.md
@@ -3,11 +3,11 @@ title: "linux 텍스트처리"
 excerpt: "gpt 물어보는걸로는 안외워진다.."
 
 categories:
-  - linux
+  - study
 tags:
   - tag1
 
-permalink: /linux/2nd/
+permalink: /study/2nd/
 
 toc: true
 toc_sticky: true
