update 5th post

--- a/_posts/2024-12-15-5th.md
+++ b/_posts/2024-12-15-5th.md
@@ -59,5 +59,4 @@ sprinbgoot를 2.4로 내려봤는데(hibernate 5.4) 동일했다.
 혹시 hibernate가 아니면 발생할 수도 있나..?  
 지금 테스트해보는건 너무 가는것 같고 혹시 orm 구현체를 바꿀 일이 있으면 테스트해봐야겠다.   
 <br>
-테스트를 하고나니 후련하고 왜 진작 안했을까 싶다.   
-의문이 들면 자주 테스트해봐야겠다.
+라고 결론을 냈었는데 attribute를 하나 더 선언하고 명확하게 쓰는게 더 좋은 코드라는 생각이 든다.
