--- a/_posts/2025-01-31-6th.md
+++ b/_posts/2025-01-31-6th.md
@@ -1,17 +1,28 @@
 ---
-title: ""
-excerpt: ""
+title: "springboot 3.4 k8s 한글경로 오류 문제"
+excerpt: "springboot 3.4 k8s 한글경로 오류 문제"
 
 categories:
-  - study
+  - diary
 tags:
   - tag1
 
-permalink: /study/6th/
+permalink: /diary/6th/
 
 toc: true
 toc_sticky: true
 
 date: 2025-01-31
-last_modified_at: 2025-01-31
+last_modified_at: 2025-03-25
 ---
+## springboot 3.4 k8s 한글 파일 관련 업로드/다운로드 에러 
+`springboot 3.4.1` application을 `spring-boot:build-image`로 이미지를 만들어서 서비스한 결과 
+파일 이름에 한글이 들어가는 경우의 업로드/다운로드가 실패했다.  
+설정 확인 결과 컨테이너 env에 `JAVA_OPTS`는 `-Dfile.encoding=UTF-8`로, `LANG`은 `en_US.UTF-8`로 잘 설정되있었다.
+pod는 `/bin/bash`로 접속이 불가능한 상태였고, `LANG` 명령어도 먹히지 않았다. 
+<br>
+**문제 원인**: image builder를 지정하지 않아서 `paketobuildpacks/builder-jammy-java-tiny`가 설정되었는데,  
+빌드된 이미지가 경량화와 보안성을 위해 os 유틸리티와 로케일 관련 파일이 없다고 한다..  
+<br>
+빠른 해결을 위해 일단 `paketobuildpacks/builder-jammy-full`를 적용해서 이슈는 해결.  
+어떤 빌드팩들이 있는지 살펴볼 필요가 있을 것 같다. 
